# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task-1.md  task-2.md  task-3.md  task-4.md
.github/approvals/: approvals.md
.github/pull_requests/: pr-1-task-1.md  pr-2-task-2.md  pr-3-task-3.md  pr-4-task-4.md
.qwen/: settings.json
backend/app/: main.py
mcp/mcp_lms/: pyproject.toml
mcp/mcp_observability/: __init__.py  __main__.py  client.py  pyproject.toml
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
