[project]
name = "lms-mcp"
version = "0.1.0"
description = "MCP server exposing LMS backend operations as typed tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_lms"]

[project.entry-points."nanobot.mcp"]
lms = "mcp_lms"
